--- a/FitHub/FitHub/Main/Base.lproj/Main.storyboard
+++ b/FitHub/FitHub/Main/Base.lproj/Main.storyboard
@@ -14,9 +14,16 @@
             <objects>
                 <navigationController id="KoM-w1-RLY" customClass="NavigationController" customModule="FitHub" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Setting" image="setting" id="Szu-IL-gYZ"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="VPf-y0-zo7" customClass="NavigationBar" customModule="FitHub" customModuleProvider="target">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" translucent="NO" id="VPf-y0-zo7" customClass="NavigationBar" customModule="FitHub" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.2666666667" green="0.2666666667" blue="0.2666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </textAttributes>
+                        <textAttributes key="largeTitleTextAttributes">
+                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </textAttributes>
                     </navigationBar>
                     <connections>
                         <segue destination="SO1-rX-qkk" kind="relationship" relationship="rootViewController" id="hR2-tj-wNY"/>
@@ -31,9 +38,13 @@
             <objects>
                 <navigationController id="g2r-WZ-XtM" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Events" image="events" id="pxd-9f-Vld"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="cPC-DM-1tK">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" translucent="NO" id="cPC-DM-1tK">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.2666666667" green="0.2666666667" blue="0.2666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </textAttributes>
                     </navigationBar>
                     <connections>
                         <segue destination="6og-NV-5Df" kind="relationship" relationship="rootViewController" id="Xb1-MK-ion"/>
@@ -48,11 +59,11 @@
             <objects>
                 <viewController id="6og-NV-5Df" customClass="EventsViewController" customModule="FitHub" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="LuA-xa-Syf">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="tuf-UN-fQ1">
-                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
                                     <outlet property="dataSource" destination="6og-NV-5Df" id="INA-XN-g82"/>
@@ -83,7 +94,7 @@
             <objects>
                 <viewController id="SO1-rX-qkk" customClass="MeViewController" customModule="FitHub" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="fNS-KM-4FM">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="S0k-XW-GXg"/>
@@ -99,10 +110,13 @@
             <objects>
                 <tabBarController id="alq-hz-bkE" customClass="TabBarController" customModule="FitHub" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="AFy-5S-xJk"/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Wok-5a-WkK" customClass="TabBar" customModule="FitHub" customModuleProvider="target">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" translucent="NO" id="Wok-5a-WkK" customClass="TabBar" customModule="FitHub" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" red="0.2666666667" green="0.2666666667" blue="0.2666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="barTintColor" red="0.2666666667" green="0.2666666667" blue="0.2666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="selectedImageTintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </tabBar>
                     <connections>
                         <segue destination="HQF-nP-7r5" kind="relationship" relationship="viewControllers" id="Y8W-Fd-RWG"/>
@@ -120,9 +134,17 @@
             <objects>
                 <navigationController id="HQF-nP-7r5" customClass="NavigationController" customModule="FitHub" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Users" image="user" id="EDV-Sq-GjS"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="PNv-Dt-09N" customClass="NavigationBar" customModule="FitHub" customModuleProvider="target">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" translucent="NO" id="PNv-Dt-09N" customClass="NavigationBar" customModule="FitHub" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="barTintColor" red="0.2666666667" green="0.2666666667" blue="0.2666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </textAttributes>
+                        <textAttributes key="largeTitleTextAttributes">
+                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </textAttributes>
                     </navigationBar>
                     <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="SSJ-xW-m6z">
                         <autoresizingMask key="autoresizingMask"/>
@@ -135,45 +157,16 @@
             </objects>
             <point key="canvasLocation" x="-834" y="-897"/>
         </scene>
-        <!--All Language-->
+        <!--Users-->
         <scene sceneID="Ngh-aY-St4">
             <objects>
                 <viewController id="lhj-BX-qy3" customClass="HomeViewController" customModule="FitHub" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="HLb-z0-Inu">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SMV-We-ijP">
-                                <rect key="frame" x="0.0" y="64" width="375" height="30"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total:0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7ZY-Tq-2ia">
-                                        <rect key="frame" x="329" y="0.0" width="38" height="30"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" relation="lessThanOrEqual" constant="100" id="xPw-08-3k6"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="12"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3ac-hn-MsG">
-                                        <rect key="frame" x="0.0" y="0.0" width="329" height="30"/>
-                                        <color key="backgroundColor" red="0.2666666667" green="0.2666666667" blue="0.2666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    </view>
-                                </subviews>
-                                <color key="backgroundColor" red="0.7843137255" green="0.7843137255" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstItem="3ac-hn-MsG" firstAttribute="top" secondItem="SMV-We-ijP" secondAttribute="top" id="EdA-vs-Hd9"/>
-                                    <constraint firstItem="7ZY-Tq-2ia" firstAttribute="leading" secondItem="3ac-hn-MsG" secondAttribute="trailing" id="Kbd-V4-A3s"/>
-                                    <constraint firstItem="3ac-hn-MsG" firstAttribute="leading" secondItem="SMV-We-ijP" secondAttribute="leading" id="PPL-uo-2eH"/>
-                                    <constraint firstItem="7ZY-Tq-2ia" firstAttribute="top" secondItem="SMV-We-ijP" secondAttribute="top" id="gT3-A7-jnY"/>
-                                    <constraint firstAttribute="bottom" secondItem="7ZY-Tq-2ia" secondAttribute="bottom" id="lBG-kd-yJ8"/>
-                                    <constraint firstAttribute="trailing" secondItem="7ZY-Tq-2ia" secondAttribute="trailing" constant="8" id="mwf-Iy-iXw"/>
-                                    <constraint firstAttribute="bottom" secondItem="3ac-hn-MsG" secondAttribute="bottom" id="r3s-8q-dD9"/>
-                                    <constraint firstAttribute="height" constant="30" id="x9t-4a-Swg"/>
-                                </constraints>
-                            </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="60" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="bFE-7T-0Qh">
-                                <rect key="frame" x="0.0" y="94" width="375" height="524"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
                                     <outlet property="dataSource" destination="lhj-BX-qy3" id="qzh-kj-MCI"/>
@@ -183,17 +176,14 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="SMV-We-ijP" firstAttribute="top" secondItem="6Uh-O7-cdL" secondAttribute="top" id="0B3-S4-9U0"/>
                             <constraint firstItem="6Uh-O7-cdL" firstAttribute="trailing" secondItem="bFE-7T-0Qh" secondAttribute="trailing" id="Fdk-1P-FGK"/>
-                            <constraint firstItem="bFE-7T-0Qh" firstAttribute="top" secondItem="SMV-We-ijP" secondAttribute="bottom" id="H1S-N5-pu8"/>
+                            <constraint firstItem="bFE-7T-0Qh" firstAttribute="top" secondItem="6Uh-O7-cdL" secondAttribute="top" id="PLa-Ts-rjs"/>
                             <constraint firstItem="6Uh-O7-cdL" firstAttribute="bottom" secondItem="bFE-7T-0Qh" secondAttribute="bottom" id="k01-QQ-fAR"/>
-                            <constraint firstItem="6Uh-O7-cdL" firstAttribute="trailing" secondItem="SMV-We-ijP" secondAttribute="trailing" id="mD7-ux-vOL"/>
                             <constraint firstItem="bFE-7T-0Qh" firstAttribute="leading" secondItem="6Uh-O7-cdL" secondAttribute="leading" id="otX-dY-B0t"/>
-                            <constraint firstItem="SMV-We-ijP" firstAttribute="leading" secondItem="6Uh-O7-cdL" secondAttribute="leading" id="qz6-tL-5VA"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Uh-O7-cdL"/>
                     </view>
-                    <navigationItem key="navigationItem" title="All Language" id="T9N-Qv-DLh">
+                    <navigationItem key="navigationItem" title="Users" id="T9N-Qv-DLh">
                         <barButtonItem key="leftBarButtonItem" title="City" id="bSM-dj-c1y">
                             <connections>
                                 <action selector="cityItemTap:" destination="lhj-BX-qy3" id="ALR-wt-Urf"/>
@@ -209,7 +199,6 @@
                         <outlet property="cityItem" destination="bSM-dj-c1y" id="Dcx-uJ-X8s"/>
                         <outlet property="languageItem" destination="Sjn-rl-Q31" id="5RN-1G-4CU"/>
                         <outlet property="tableView" destination="bFE-7T-0Qh" id="8Hc-TU-Z04"/>
-                        <outlet property="totalLabel" destination="7ZY-Tq-2ia" id="m59-QK-U5B"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="K5p-HO-ts4" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -221,9 +210,13 @@
             <objects>
                 <navigationController id="SAo-Fj-jkC" customClass="NavigationController" customModule="FitHub" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Discovery" image="discovery" id="J8c-X5-mhf"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Bxb-YS-DKK" customClass="NavigationBar" customModule="FitHub" customModuleProvider="target">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" translucent="NO" id="Bxb-YS-DKK" customClass="NavigationBar" customModule="FitHub" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.2666666667" green="0.2666666667" blue="0.2666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </textAttributes>
                     </navigationBar>
                     <connections>
                         <segue destination="TQ5-fz-OaR" kind="relationship" relationship="rootViewController" id="ZhQ-zX-97p"/>
@@ -238,7 +231,7 @@
             <objects>
                 <viewController id="TQ5-fz-OaR" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="CdQ-J6-oNy">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="ha8-U5-kAx"/>
