--- a/FitHub/FitHub/Events/EventsTableViewCell.xib
+++ b/FitHub/FitHub/Events/EventsTableViewCell.xib
@@ -5,38 +5,43 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="EventsTableViewCell" customModule="FitHub" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="373" id="KGk-i7-Jjw" customClass="EventsTableViewCell" customModule="FitHub" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="373"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="372.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Av-VC-oq6">
-                        <rect key="frame" x="8" y="8" width="304" height="27.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" delaysContentTouches="NO" bouncesZoom="NO" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8p2-zy-IVk">
+                        <rect key="frame" x="16" y="11" width="288" height="351"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
+                        <connections>
+                            <outlet property="delegate" destination="KGk-i7-Jjw" id="UeG-IK-HLS"/>
+                        </connections>
+                    </textView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="3Av-VC-oq6" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="Dmn-A2-r9O"/>
-                    <constraint firstAttribute="trailing" secondItem="3Av-VC-oq6" secondAttribute="trailing" constant="8" id="Pwb-26-kDL"/>
-                    <constraint firstItem="3Av-VC-oq6" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="TYX-o1-XIe"/>
-                    <constraint firstAttribute="bottom" secondItem="3Av-VC-oq6" secondAttribute="bottom" constant="8" id="aB9-gK-IaT"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="8p2-zy-IVk" secondAttribute="bottom" id="XaF-KZ-sk7"/>
+                    <constraint firstItem="8p2-zy-IVk" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="aNZ-YC-PET"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="8p2-zy-IVk" secondAttribute="trailing" id="jZH-UT-fq8"/>
+                    <constraint firstItem="8p2-zy-IVk" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="pbw-GZ-mZy"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="label" destination="3Av-VC-oq6" id="0ek-9w-lQk"/>
+                <outlet property="label" destination="8p2-zy-IVk" id="e6G-q4-0uB"/>
             </connections>
-            <point key="canvasLocation" x="-174" y="-23"/>
+            <point key="canvasLocation" x="-451" y="8.5"/>
         </tableViewCell>
     </objects>
 </document>
