--- a/FitHub/FitHub/Main/Base.lproj/Main.storyboard
+++ b/FitHub/FitHub/Main/Base.lproj/Main.storyboard
@@ -37,7 +37,7 @@
         <!--Events-->
         <scene sceneID="JYU-Oe-nhh">
             <objects>
-                <navigationController id="g2r-WZ-XtM" sceneMemberID="viewController">
+                <navigationController id="g2r-WZ-XtM" customClass="NavigationController" customModule="FitHub" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Events" image="events" id="pxd-9f-Vld"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" translucent="NO" id="cPC-DM-1tK">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
